<resources>
    <string name="app_name">Quarentilograms</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="userName">Username</string>
    <string name="name">Name</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
</resources>